--- a/telecommandePull/cls411-chromecast/sender.css
+++ b/telecommandePull/cls411-chromecast/sender.css
@@ -1,106 +1,74 @@
-#container{
-    background-color: aqua;
+.body-container{
+    background: linear-gradient(rgb(189, 184, 184), rgb(210, 157, 235));
 
-    width: 300px;
+    width: 250px;
+    height: 500px;
+
     margin: 0 auto;
-    margin-top: 200px;
 
-    border-radius: 15px;
+    padding-left: 10px;
 
-    height: 600px;
+    border-radius: 10px;
 }
 
-.fa-solid:hover{
-    cursor: pointer;
+.power-on button{
+    height: 40px;
+    width: 40px;
+
+    margin-top: 10px;
+    margin-bottom: 20px;
+
+    border-radius: 50%;
+    font-size: 25px;
 }
 
-.power-on{
-    background-color: green;
+button:hover{
+    background-color: rgb(210, 157, 235);
+}
+
+.start{
+    font-size: 25px;
+    border: none;
+    border-radius: 7px;
+
+    margin-bottom: 100px;
+}
+
+.play-pause-container{
+    margin: 0 auto;
     width: fit-content;
-    margin-left: 10px;
-    margin-bottom: 60px;
+}
 
-    font-size: 30px;
+.play-pause{
+    height: 35px;
 
+    margin-bottom: 100px;
+}
+
+.start:active{
     border: 1px solid black;
-    border-radius: 50px;
-    padding: 3px;
-    
+}
 
+.controls{
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    flex-direction: row;
 
-#arrows-container{
-    background-color: red;
-    min-width: fit-content;
-    width: 150px;
-    border-radius: 15px;
-
+    width: fit-content;
     margin: 0 auto;
-
-    padding: 10px;
-
-    
 }
-#arrows{
-    width: 125px;
+
+.sound, .video-control{
+
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
 
-    font-size: 30px;
-}
- 
-
-.arrow-up-down{
-    margin: 0 auto;
 }
 
-.fa-arrow-right{
-    float: right;
+.sound{
+    margin-right: 40px;
 }
 
-.arrow{
-    border-radius: 7px;
-    padding: 5px;
-    background-color: green;
-}
-
-.arrow:hover{
-    background-color: green;
-}
-.arrow:active{
-    background-color: red;
-    border: 1px solid green;
-}
-
-#select-text{
-    border: 3px solid black;
-    border-radius: 10px;
+.sound button, .video-control button{
     height: 50px;
-    width: 100px;
-
-    margin: 0 auto;
-
-    font-size: 30px;
-    font-family: cursive;
-
-
-    
-}
-
-#volume{
-    border: 3px solid black;
-    border-radius: 10px;
-    width: fit-content;
-    padding: 10px;
-    
-    
-    font-size: 30px;
-}
-
-#volume div:first-child{
-    border-bottom: 2px solid black;
+    width: 40px;
 }
