--- a/sender.css
+++ b/sender.css
@@ -13,13 +13,13 @@
 
 .power-on button{
     height: 40px;
-    width: 40px;
+    width: fit-content;
 
     margin-top: 10px;
     margin-bottom: 20px;
 
-    border-radius: 50%;
-    font-size: 25px;
+    border-radius: 10px;
+    font-size: 15px;
 }
 
 button:hover{
