--- a/sender.css
+++ b/sender.css
@@ -30,9 +30,8 @@ button:hover{
 
 .start{
     font-size: 25px;
-    border: none;
-    border-radius: 7px;
-
+    border-radius: 50%;
+    margin-left: 42%;
     margin-bottom: 100px;
 }
 
@@ -86,7 +85,7 @@ button:hover{
   }
   
 .connected button {
-    animation: spin 2s linear infinite;
+    animation: spin 2s linear;
     background-color: green; 
   }
 
