updated start css

--- a/sender.css
+++ b/sender.css
@@ -30,8 +30,7 @@ button:hover{
 
 .start{
     font-size: 25px;
-    border-radius: 50%;
-    margin-left: 42%;
+    border-radius: 10px;
     margin-bottom: 100px;
 }
 
