--- a/sender.css
+++ b/sender.css
@@ -32,6 +32,7 @@ button:hover{
     font-size: 25px;
     border-radius: 10px;
     margin-bottom: 100px;
+    margin-left: 42%;
 }
 
 .play-pause-container{
