--- a/telecommande/sender.css
+++ b/telecommande/sender.css
@@ -111,3 +111,7 @@ button:hover{
     background-color: green;
     animation: pulse 1s;
 }
+
+@media only screen and (max-width: 500px) {
+    .help{ display: none;}
+}
